[gd_scene load_steps=5 format=3 uid="uid://pgs55lptk3ca"]

[ext_resource type="Script" path="res://nodes/stage/stage_interface/action_order_visual/action_order_visual.gd" id="1_ievqq"]
[ext_resource type="Texture2D" uid="uid://bb7kpsrnike3k" path="res://resources/images/placeholder_portrait.png" id="2_udfm2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ibfs8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wu241"]

[node name="ActionOrderVisual" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
grow_vertical = 0
script = ExtResource("1_ievqq")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -15.0
offset_top = -40.0
offset_right = 15.0
offset_bottom = -10.0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_ibfs8")

[node name="Tail" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -20.0
offset_right = 14.0
offset_bottom = -6.0
grow_vertical = 0
rotation = 0.785398
theme_override_styles/panel = SubResource("StyleBoxFlat_wu241")

[node name="IconTextureRect" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -14.0
offset_top = -39.0
offset_right = 14.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("2_udfm2")
expand_mode = 1

[node name="CountLabel" type="Label" parent="IconTextureRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 4.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 12
text = "?"
horizontal_alignment = 2
vertical_alignment = 2
